src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint32__cast_uint32_to_uint64.snap
---
source: src/expr/src/scalar/func/impls/uint32.rs
expression: "#[sqlfunc(\n    sqlname = \"uint4_to_uint8\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastUint64ToUint32),\n    is_monotone = true\n)]\nfn cast_uint32_to_uint64(a: u32) -> u64 {\n    u64::from(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastUint32ToUint64;
impl crate::func::EagerUnaryFunc for CastUint32ToUint64 {
    type Input<'a> = u32;
    type Output<'a> = u64;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_uint32_to_uint64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastUint64ToUint32)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastUint32ToUint64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("uint4_to_uint8")
    }
}
fn cast_uint32_to_uint64(a: u32) -> u64 {
    u64::from(a)
}
